--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,11 @@ img {
   height: 100%;
   background-color: #005f73;
   transition: left 0.3s ease; /* Smooth sliding effect */
+  z-index: 1050;
 }
-
+.side-nav.open {
+  left:0;
+}
 .side-nav a {
   display: block;
   padding: 10px;
